--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,35 +97,57 @@
         app:layout_constraintTop_toBottomOf="@+id/btn5" />
 
     <TextView
-        android:id="@+id/answerHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/answerHeader"
-        android:textSize="12sp"
+        android:id="@+id/tvAlertText"
+        android:layout_width="411dp"
+        android:layout_height="15dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCheck" />
+        app:layout_constraintTop_toBottomOf="@+id/edUserInput" />
+
 
     <Button
         android:id="@+id/btnCheck"
         android:layout_width="90dp"
         android:layout_height="48dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
         android:text="@string/btnCheck"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edUserInput" />
+        app:layout_constraintTop_toBottomOf="@+id/tvAlertText" />
 
     <Button
         android:id="@+id/btnHint"
         android:layout_width="90dp"
         android:layout_height="48dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginTop="24dp"
         android:text="@string/btnHint"
         android:textSize="12sp"
+        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
+        app:layout_constraintStart_toEndOf="@+id/btnCheck"
+        app:layout_constraintTop_toBottomOf="@+id/tvAlertText" />
+
+    <TextView
+        android:id="@+id/tvCorrectAnswerHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/tvCorrectAnswerHeader"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCheck" />
+
+    <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/btnDelete"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edUserInput" />
+        app:layout_constraintTop_toBottomOf="@+id/tvAlertText" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
