--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,13 +98,18 @@
 
     <TextView
         android:id="@+id/tvAlertText"
-        android:layout_width="411dp"
-        android:layout_height="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="5dp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edUserInput" />
+        app:layout_constraintTop_toBottomOf="@+id/edUserInput"
+        tools:text="ikke riktig" />
 
 
     <Button
@@ -129,6 +134,18 @@
         app:layout_constraintStart_toEndOf="@+id/btnCheck"
         app:layout_constraintTop_toBottomOf="@+id/tvAlertText" />
 
+
+    <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="90dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/btnDelete"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvAlertText" />
+
     <TextView
         android:id="@+id/tvCorrectAnswerHeader"
         android:layout_width="wrap_content"
@@ -140,27 +157,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCheck" />
 
-    <Button
-        android:id="@+id/btnDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/btnDelete"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAlertText" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rwWordList"
+    <TextView
+        android:id="@+id/tvCorrectAnswers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCorrectAnswerHeader" />
+        app:layout_constraintTop_toBottomOf="@+id/tvCorrectAnswerHeader"
+        tools:text="snus, løping, hei, hvaks, alksdjf" />
+
+    <Button
+        android:id="@+id/btnAnswers"
+        android:layout_width="80dp"
+        android:layout_height="36dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/btnAnswers"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvCorrectAnswers"
+        app:layout_constraintVertical_bias="0.956" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
