--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <!--
     <TextView
         android:id="@+id/tvHeader"
@@ -18,15 +19,58 @@
         app:layout_constraintTop_toTopOf="parent" />
     -->
 
+    <Button
+        android:id="@+id/btn1"
+        style="@style/letter_btn"
+        android:layout_marginStart="32dp"
+        android:text="@string/btn1"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn3"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn2"
         style="@style/letter_btn"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="@string/btn2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.198"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />
+
+    <Button
+        android:id="@+id/btn3"
+        style="@style/letter_btn"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="460dp"
+        android:text="@string/btn3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn2" />
+
+    <Button
+        android:id="@+id/btn4"
+        style="@style/letter_btn"
+        android:layout_marginStart="32dp"
+        android:text="@string/btn4"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn6"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn5"
+        style="@style/letter_btn"
+        android:text="@string/btn5"
+        app:layout_constraintEnd_toStartOf="@+id/btn6"
+        app:layout_constraintHorizontal_bias="0.616"
+        app:layout_constraintStart_toEndOf="@+id/btn4"
+        app:layout_constraintTop_toBottomOf="@+id/btn4" />
+
+    <Button
+        android:id="@+id/btn6"
+        style="@style/letter_btn"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="464dp"
+        android:text="@string/btn6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn3" />
 
     <Button
 
@@ -35,60 +79,16 @@
         android:text="@string/btn7"
         app:layout_constraintBottom_toTopOf="@+id/btn5"
         app:layout_constraintEnd_toStartOf="@+id/btn3"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.449"
         app:layout_constraintStart_toEndOf="@+id/btn1"
-        app:layout_constraintTop_toBottomOf="@+id/btn2"
-        app:layout_constraintVertical_bias="0.457" />
-
-    <Button
-        android:id="@+id/btn4"
-        style="@style/letter_btn"
-        android:layout_marginStart="68dp"
-        android:text="@string/btn4"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btn6"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btn1"
-        style="@style/letter_btn"
-        android:layout_marginStart="68dp"
-        android:text="@string/btn1"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btn3"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btn6"
-        style="@style/letter_btn"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="68dp"
-        android:text="@string/btn6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn3" />
-
-    <Button
-        android:id="@+id/btn5"
-        style="@style/letter_btn"
-        android:layout_marginTop="8dp"
-        android:text="@string/btn5"
-        app:layout_constraintEnd_toStartOf="@+id/btn6"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toEndOf="@+id/btn4"
-        app:layout_constraintTop_toBottomOf="@+id/btn4" />
-
-    <Button
-        android:id="@+id/btn3"
-        style="@style/letter_btn"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="68dp"
-        android:text="@string/btn3"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn2" />
+
 
     <EditText
         android:id="@+id/edUserInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="124dp"
         android:autofillHints=""
         android:ems="8"
         android:hint="@string/edUserInput"
@@ -96,52 +96,54 @@
         android:minHeight="48dp"
         android:textColorHint="#757575"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn5" />
+        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />
 
     <TextView
         android:id="@+id/tvAlertText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="323dp"
+        android:layout_height="32dp"
 
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:paddingHorizontal="10dp"
         android:paddingVertical="5dp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.685"
+        app:layout_constraintStart_toEndOf="@+id/btn3"
         app:layout_constraintTop_toBottomOf="@+id/edUserInput"
         tools:text="ikke riktig" />
 
 
     <Button
-        android:id="@+id/btnHint"
-        android:layout_width="90dp"
-        android:layout_height="48dp"
-        android:text="@string/btnHint"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toEndOf="@+id/btnCheck"
-        app:layout_constraintTop_toBottomOf="@+id/tvAlertText" />
-
-    <Button
         android:id="@+id/btnCheck"
         android:layout_width="90dp"
         android:layout_height="48dp"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="28dp"
         android:text="@string/btnCheck"
         android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn6"
+        app:layout_constraintTop_toBottomOf="@+id/tvAlertText" />
+
+    <Button
+        android:id="@+id/btnHint"
+        android:layout_width="90dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="28dp"
+        android:text="@string/btnHint"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
+        app:layout_constraintHorizontal_bias="0.447"
+        app:layout_constraintStart_toEndOf="@+id/btnCheck"
         app:layout_constraintTop_toBottomOf="@+id/tvAlertText" />
 
     <Button
         android:id="@+id/btnDelete"
         android:layout_width="90dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="4dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/btnDelete"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -151,11 +153,11 @@
         android:id="@+id/tvCorrectAnswerHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="20dp"
         android:text="@string/tvCorrectAnswerHeader"
         android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn5"
         app:layout_constraintTop_toBottomOf="@+id/btnCheck" />
 
     <TextView
@@ -172,28 +174,31 @@
 
     <TextView
         android:id="@+id/tvCorrectAnswers"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="446dp"
+        android:layout_height="23dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="32dp"
         android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.928"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvCorrectAnswerHeader"
+        app:layout_constraintVertical_bias="0.0"
         tools:text="snus, løping, hei, hvaks, alksdjf" />
 
     <Button
         android:id="@+id/btnAnswers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
+        android:layout_marginEnd="64dp"
         android:layout_marginBottom="8dp"
         android:text="@string/btnAnswers"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvCorrectAnswers"
-        app:layout_constraintVertical_bias="0.956" />
+        app:layout_constraintVertical_bias="0.627" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
